--- a/pom.xml
+++ b/pom.xml
@@ -77,4 +77,28 @@
             <version>1.18.38</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.4.1</version>
+                <configuration>
+                    <configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
+                    <overwrite>true</overwrite>
+                    <verbose>true</verbose>
+                    <!-- 指定 JDBC 驱动类 -->
+                    <jdbcDriver>com.mysql.cj.jdbc.Driver</jdbcDriver>
+                </configuration>
+                <dependencies>
+                    <!-- 插件依赖的 MySQL 驱动 -->
+                    <dependency>
+                        <groupId>com.mysql</groupId>
+                        <artifactId>mysql-connector-j</artifactId>
+                        <version>8.3.0</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
+    </build>
 </project>
